# C-Projects

./: .gitignore  README.md  SDL2.7z
BasicArraySorter/: main.c
CombPermCalculator/: main  main.c
CombinationCalculator/: main  main.c
ConsoleTurnBasedGame/: Makefile  _err.c  _err.h  data.c  data.h  engine.c  engine.h  keycodes.h  keys.txt  main.c
HelloWorld/: main.c
MathMazeSolver/: main.c
PerfectNumberCalculator/: main.c
RocketGame/: CMakeLists.txt  loop.c  loop.h  main.c
RocketGame/engine/: engine.c  engine.h
conio/: conio.c  conio.h
utils_lib/: primes.txt  utils.c  utils.h
